Completed initial draft of major pages for frontend

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,3 +10,8 @@
 html, body {
   background-color: #282828;
 }
+
+input[type="search"]::-webkit-search-cancel-button {
+  display: none;
+  -webkit-appearance: none;
+}
